@@ -5,6 +5,7 @@ meecast (0.9.12) unstable; urgency=low
   * Added wake up internet connection for refresh weather forecast
   * Added station Poselok rudnika Kupol to gismeteo.ru source
   * Fixed problem with Denmark, Germany stations in openweathermap.org source
+  * Fixed incorrect name of pressure from "Pa" to "kPa"
 
  -- Vlad Vasiliev <vlad@gas.by>  Wed, 27 Aug 2014 10:31:23 +0200
 
